--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
 
+<html>
+    <head>
+        <title>Calculator</title>
+
+        <link rel="stylesheet" href="style.css">
+        <script src = script.js></script>
+    </head>
+
+<body>
+    <div class="maindiv">
+        <div class ="number">
+                <p class = "total"> 20 </p> 
+                <br>
+                <p class = "transaction"> 10 + 10 </p>        
+        </div>
+
+        <div class ="button">
+            <button id="AC">AC</button>
+            <button id="X">X</button>
+            <button id="remainder">%</button>
+            <button id="divide">/</button>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button id="multiply">X</button>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button id="subtract">-</button>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>0</button>
+            <button id ="addition"> + </button>
+            <button id="dot">.</button>
+            <button class ="equal" id="equal">=</button>
+        </div>
+
+    </div>
+</body>
+
+</html>
